--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,1 +1,4 @@
-<h2>The Post Create Component</h2>
+<textarea rows="6" [value]="newPost"></textarea>
+<hr>
+<button (click)="onAddPost()">Save Post</button>
+<p>{{newPost}}</p>
